# pi-mono-python

./: .gitignore  README.md  pyproject.toml
scripts/: ts_extension_host.mjs
src/pi_mono/: __init__.py  config.py
src/pi_mono/agent/: __init__.py  agent.py  agent_loop.py  loop.py  proxy.py  types.py
src/pi_mono/ai/: api_registry.py  cli.py  images.py  (+12 more)
tests/: __init__.py  conftest.py  test_abort_signals.py  test_agent.py  test_agent_loop.py  test_agent_proxy.py  test_agent_session_retry.py  test_amazon_bedrock.py  test_ansi.py  test_anthropic.py  test_anthropic_oauth.py  test_api_registry.py  test_auth_guidance.py  test_auth_storage.py  test_cli.py  test_clipboard.py  test_cloudflare.py  test_coding_agent_cli.py  test_coding_agent_export.py  test_coding_agent_extensions.py  test_coding_agent_interactive.py  test_coding_agent_print_mode.py  test_coding_agent_rpc.py  test_coding_agent_session_picker.py  test_coding_agent_tools.py  test_config.py  test_cursor.py  test_deprecation.py  test_diagnostics.py  test_editor_typing.py  test_env_api_keys.py  test_event_stream.py  test_fs_watch.py  test_github_copilot_headers.py  test_github_copilot_oauth.py  test_google.py  test_hash.py  test_headers.py  test_images.py  test_json_parse.py  (+42 more)
tests/fixtures/: hello.txt
tests/harness/: session_test_utils.py  test_agent_harness.py  test_agent_harness_stream.py  test_compaction.py  test_local_env.py  test_prompt_templates.py  test_repo.py  test_resource_formatting.py  test_session.py  test_session_uuid.py  test_skills.py  test_storage.py  test_system_prompt.py  test_truncate.py
(+211 files in other folders)
